--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
 </style>
 </head>
 <body>
-{% include "widget/modal/dialog.html"%}
+{% include "widget/modal/dialog_free.html"%}
 {% include "widget/common_hide/common_hide.html"%}
 <div class="zhezhao" id="zhezhaox" style="display: none;z-index: 1003">
 </div>
@@ -407,7 +407,7 @@
 <script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/guanggao_slider.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/symodal.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/symodal_free.js"></script>
 <script>
   $(function () {
     var nowLocation = window.location.href;
