--- a/views/about/university.html
+++ b/views/about/university.html
@@ -525,7 +525,7 @@
             <div class="jian_con_top_s">{{schooltopic.content | safe}}</div>
         </div>
         <div class="jian_con_rigth">
-            <img src="" alt="">
+            <img src="{{ schooltopic.des_img }}" alt="">
         </div>
         <div class="jian_con_bottom clearfix">
             {% for k, item in schooltopic.des_images %}
