修改大学页面

--- a/views/about/middle.html
+++ b/views/about/middle.html
@@ -398,7 +398,7 @@
 <!-- 开设课程 -->
 <div class="dui-layout-lg" style="margin-top: 50px;">
     <div class="kai_title"></div>
-    <div class="branch-expert-lunbo" style="width:1200px;position: relative;height:270px;">
+    <div class="branch-expert-lunbo" style="position: relative;height:270px;">
         <a class="arrow-left arrow-btn" href="javascript:void(0);" style="display:block;"></a>
         <a class="arrow-right arrow-btn" href="javascript:void(0);" style="display:block;"></a>
         <div class="swiper-container" style="width:1055px;margin: 0 auto;height:270px;">
