修改大学页面

--- a/views/about/grouptemplate.html
+++ b/views/about/grouptemplate.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/about.css">
 </head>
 <body style="overflow-x:hidden;">
+  <div style="display: none;">
+    <input type="hidden" id="relationId" value="18_站内院校_college_form">
+  </div>
     <!-- <div class="progress"></div> -->
     {% include "widget/common_hide/common_hide.html"%}
     {% include "widget/top/top.html" %}
