--- a/views/about/middle.html
+++ b/views/about/middle.html
@@ -297,6 +297,9 @@
 </style>
 </head>
 <body style="background: #fff;">
+<div style="display: none;">
+    <input type="hidden" id="relationId" value="18_站内院校_college_form">
+</div>
 {% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 
