--- a/views/about/grouptemplate.html
+++ b/views/about/grouptemplate.html
@@ -21,8 +21,8 @@
     <div class="banner" style="background-image:url({{schooltopic.list.sch_background_map}});height: 450px; overflow:hidden;background-size:cover;background-position: center center">
         <div class="wrap1">
           <div class="btn-box">
-            <a style="background:{{schooltopic.list.button_background}};border: 1px solid {{schooltopic.list.button_background}};" href="http://vip.jjl.cn/index.php?m=content&c=index&a=consult" target="_blank">在线咨询</a>
-            <a style="background:{{schooltopic.list.button_background}};border: 1px solid {{schooltopic.list.button_background}};" class="md-btn" href="http://www.jjl.cn/about/contact.html" target="_blank">我要面谈</a>
+            <a href="http://vip.jjl.cn/index.php?m=content&c=index&a=consult" target="_blank">在线咨询</a>
+            <a class="md-btn" href="http://www.jjl.cn/about/contact.html" target="_blank">我要面谈</a>
           </div>
         </div>
     </div>
