--- a/views/about/university.html
+++ b/views/about/university.html
@@ -12,8 +12,8 @@
   /* banner */
   .banner{width:100%;height: 500px; overflow:hidden;}
   .banner .btn-box{width:450px;height:100px;margin:420px auto;}
-  .banner .btn-box a{display: block; font-size: 16px; text-align: center; line-height:40px;color:#fff; float:left; width:136px; height:40px;box-sizing: border-box; border-radius: 5px;}
-  /*.banner .btn-box a:hover{background: #efcd68; border: 1px solid #efcd68}*/
+  .banner .btn-box a{display: block; font-size: 16px; text-align: center; line-height:37px;color:#fff; float:left; width:136px; height:40px;box-sizing: border-box; border-radius: 5px;background: #fff;border: 1px solid #fff;color: #333;}
+  .banner .btn-box a:hover{background: #d31a29; border: 1px solid #d31a29;color: #fff;}
   .banner .btn-box .md-btn{margin-left:150px;}
   /*标题*/
   .content-title{
@@ -517,8 +517,8 @@
 <div class="banner" style="background-image:url({{schooltopic.sch_background_map}});height: 500px; overflow:hidden;background-size:cover;background-position: center center">
   <div class="wrap1">
     <div class="btn-box">
-      <a style="background:{{schooltopic.button_background}};border: 1px solid {{schooltopic.button_background}};" href="http://vip.jjl.cn/index.php?m=content&c=index&a=consult" target="_blank">在线咨询</a>
-      <a style="background:{{schooltopic.button_background}};border: 1px solid {{schooltopic.button_background}};" class="md-btn" href="http://www.jjl.cn/about/contact.html" target="_blank">我要面谈</a>
+      <a href="http://vip.jjl.cn/index.php?m=content&c=index&a=consult" target="_blank">在线咨询</a>
+      <a class="md-btn" href="http://www.jjl.cn/about/contact.html" target="_blank">我要面谈</a>
     </div>
   </div>
 </div>
