--- a/views/about/grouptemplate.html
+++ b/views/about/grouptemplate.html
@@ -103,7 +103,7 @@
       <div class="from-contorl">
         <div class="from-group" style="_background: {{schooltopic.list.button_background}}">
           <div class="from-pic">
-            <img class="wow zoomIn" src="http://es6.ruanyifeng.com/images/cover_thumbnail_3rd.jpg" alt="" style="height:356px;width:320px;">
+            <img class="wow zoomIn" src="{{ schooltopic.list.signup_img }}" alt="" style="height:356px;width:320px;">
           </div>
           <div class="from-inline">
             <h2 class="from-bm">我想报名</h2>
