修改中学页面

--- a/views/about/grouptemplate.html
+++ b/views/about/grouptemplate.html
@@ -49,7 +49,7 @@
           </div>
           <div class="sort-right wow fadeInRight" data-wow-delay=".3s">
             <dl>
-              <dd class="sort-des">{{ schooltopic.list.advantage }}</dd>
+              <dd class="sort-des">{{ schooltopic.list.advantage | safe }}</dd>
             </dl>
           </div>
         </div>
