--- a/views/about/grouptemplate.html
+++ b/views/about/grouptemplate.html
@@ -152,12 +152,17 @@
     </div>
   </div>
   {% include "widget/new_footer/common_footer.html" %}
+{% import "widget/new_slide/new_slide.html" as  slide %}
+{{slide.leyu_slide("XC_SCHOOLTOPIC_SEAT10",helper) }}
+<!-- 秋展浮层 -->
+{% include "widget2/active_popup/active_popup.html" %}
 <script src="{{helper.cdnhost}}/assets/js/owl.carousel.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/jquery.bxslider.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/wow.min.js"></script>
 <!-- <script src="{{helper.cdnhost}}/assets/js/signupFrom.js"></script> -->
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/Newform123.js"></script>
