首页弹窗调试接口

--- a/views/widget/modal/dialog_free.html
+++ b/views/widget/modal/dialog_free.html
@@ -6,8 +6,8 @@
 			<div><input type="text" placeholder="请输入姓名" class="name" id="myname" maxlength="10"></div>
 			<div><input type="text" placeholder="请输入手机号" class="iphone"></div>
 			<div style="position: relative;">
-			  <input type="text" class="pass-code">
-			  <button type="button" class="send-code" data-coupon="">点击发送验证码</button>
+			  <!-- <input type="text" class="pass-code">
+			  <button type="button" class="send-code" data-coupon="">点击发送验证码</button> -->
 			  <span class="error"><i></i>手机号格式不正确</span>
 			</div>
 			<div class="select">
@@ -121,11 +121,11 @@
 					{% endfor %}
 				 </ul>
 			</div>
-			<div class="checkbtn">
+			<!-- <div class="checkbtn">
 			  <input type="checkbox" id="female" checked="checked"/><label for="female">注册JJL网站账号</label>
-			</div>
+			</div> -->
 		 </div>
-		 <button class="huoqu-button" id="handelSub">点击获取优惠券</button>
+		 <button class="huoqu-button" id="handelSub">提交</button>
 	  </div>
 	</div>
  </div>
