--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -284,7 +284,16 @@
 .form-group div{margin-bottom:9px;}
 .formposirion{position:relative;}
 .close{position:absolute;top:-70%;right:0;width:36px;height:36px;background:url(../img/close_icon@2x.png) no-repeat center;background-size: cover;}
-.error{position:absolute;top:-54px;right:-65px;display:none;width:146px;height:40px;background:url(../img/tlips_bcg@2x.png) no-repeat;text-align:center;line-height:30px;}
+.error{
+    position:absolute;
+    top:-54px;
+    right:-65px;
+    display:none;
+    width:146px;
+    height:40px;
+    background:url(../img/tlips_bcg@2x.png) no-repeat;
+    text-align:center;line-height:30px;
+}
 .error>i{display:inline-block;margin-right:3px;width:14px;height:14px;background:url(../img/tan_icon@2x.png) no-repeat;vertical-align:middle;}
 .iphone,.name,.pass-code,.send-code{height:36px;border:none;border-radius:4px;}
 .iphone,.name{width:285px;color:#772c61;text-indent:22px;font-size:14px;}
@@ -303,10 +312,29 @@
 .contry-list .contry-active{background:#c13232;color:#fff;}
 .contry-list::after{position:absolute;top:-14px;right:95px;display:block;width:0;height:0;border-color:transparent transparent #fff transparent;border-style:solid;border-width:7px;content:"";}
 .contry-list li{display:inline-block;margin-right:10px;width:62px;border:solid 1px #999;border-radius:4px;text-align:center;font-size:12px;cursor:default;}
-.huoqu-button{display:inline-block;margin-left:15px;width:250px;height:36px;border:none;border-radius:32px;background-image:-moz-linear-gradient(#ffe3bf,#f6b366);background-image:-o-linear-gradient(#ffe3bf,#f6b366);background-image:-webkit-linear-gradient(#ffe3bf,#f6b366);background-image:linear-gradient(#ffe3bf,#f6b366);box-shadow:2px 2px 3px 0 #ba0000;color:#dc0006;text-align:center;font-size:18px;}
+.huoqu-button{
+    display:inline-block;
+    margin-left:15px;
+    width:250px;
+    height:36px;
+    border:none;
+    border-radius:32px;
+    background-image:-moz-linear-gradient(#ffe3bf,#f6b366);
+    background-image:-o-linear-gradient(#ffe3bf,#f6b366);
+    background-image:-webkit-linear-gradient(#ffe3bf,#f6b366);
+    background-image:linear-gradient(#ffe3bf,#f6b366);
+    box-shadow:2px 2px 3px 0 #ba0000;color:#dc0006;
+    text-align:center;
+    font-size:18px;
+    margin-top: 25px;
+}
 @media screen and (min-width:768px){
     .formContent{top:51%;}
-    .close{position: absolute;right: -30px;top: -80%;}
+    .close{
+        position: absolute;
+        right: -54px;
+        top: -103%;
+    }
     .modal-content{top:-4%;}
 }
 .close-btn{background:url(../img/rotate.gif) no-repeat center center;width: 208px;height: 163px;position: fixed;left: 0;bottom: 30px;z-index: 1100;cursor: pointer;}
