--- a/views/widget/new_footer/common_footer.html
+++ b/views/widget/new_footer/common_footer.html
@@ -1,37 +1,12 @@
-<style>
-  .footer-right{
-    width: 200px;
-    float:left;
-    padding-top: 50px;
-  }
-  .footer-right h2{
-    color: #fff;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 16px;
-    padding-bottom: 22px;
-  }
-  .footer-right dl{
-    width: 80px;
-    float:left;
-  }
-  .footer-right dl dd{
-    color:#ffffff;
-    font-size: 12px;
-    text-align: center;
-    line-height: 32px;
-  }
-</style>
-<div class="liuxue-footer"  style="min-width:1200px;">
-  <div class="liuxue-footer-content" style="margin-bottom: 0;">
-    <div class="footer-top" style="height: 40px;position: relative">
-      <h2>友情链接:</h2>
-      <div style="float: left;width: 1057px;height: 40px;overflow: hidden">
-        {% esi helper.include(esikey,'fragment/linkList','c='+tdk.cityid) %}
+<div class="liuxue-footer" style="min-width:1200px;">
+    <div class="liuxue-footer-content lx-footer-content common-footer-content" style="margin-bottom: 0;">
+      <div class="footer-top" style="height: 40px;position: relative">
+        <h2>友情链接:</h2>
+        <div style="float: left;width: 1057px;height: 40px;overflow: hidden">
+          {% esi helper.include(esikey,'fragment/linkList','c='+tdk.cityid) %}
+        </div>
       </div>
-    </div>
-    <div style="width: 708px;float: left;padding-left: 20px">
-      <div class="foot-map clearfix" style="width: 708px;">
+      <div class="foot-map clearfix" style="padding-left: 20px">
         <div class="sitemap sitemap01">
           <h2>关于我们</h2>
           <ul class="left-ul">
@@ -48,67 +23,186 @@
             <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('agreement') }}">使用协议</a></li>
           </ul>
         </div>
-        <div class="sitemap">
+        <div class="sitemap sitemap02">
           <h2>专家团队</h2>
           <ul>
             <li style="width: 312px;"><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('canzan') }}">25位留学消费教育学校指导专家</a></li>
             <li style="width: 312px;"><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('lawyer') }}">海外律师团队</a></li>
           </ul>
         </div>
-
-
+        {% set footerCountry=[
+             {
+               "id": 1,
+               "country": "美国"
+             },
+             {
+               "id": 2,
+               "country": "英国"
+             },
+             {
+              "id": 4,
+              "country": "澳大利亚"
+            },
+            {
+              "id": 3,
+              "country": "加拿大"
+            },
+            {
+              "id": 5,
+              "country": "新西兰"
+            },
+            {
+              "id": 51,
+              "country": "日本"
+            },
+            {
+              "id": 50,
+              "country": "韩国"
+            },
+            {
+              "id": 54,
+              "country": "中国香港"
+            },
+            {
+              "id": 100,
+              "country": "俄罗斯"
+            },
+            {
+              "id": 101,
+              "country": "乌克兰"
+            },
+            {
+              "id": 108,
+              "country": "爱尔兰"
+            },
+            {
+              "id": 111,
+              "country": "意大利"
+            },
+            {
+              "id": 112,
+              "country": "西班牙"
+            },
+            {
+              "id": 102,
+              "country": "白俄罗斯"
+            },
+            {
+              "id": 52,
+              "country": "新加坡"
+            },
+            {
+              "id": 53,
+              "country": "马来西亚"
+            },
+            {
+              "id": 110,
+              "country": "丹麦"
+            },
+            {
+              "id": 103,
+              "country": "德国"
+            },
+            {
+              "id": 104,
+              "country": "法国"
+            },
+            {
+              "id": 105,
+              "country": "挪威"
+            },
+            {
+              "id": 106,
+              "country": "瑞典"
+            },
+            {
+              "id": 107,
+              "country": "芬兰"
+            },
+            {
+              "id": 109,
+              "country": "荷兰"
+            },
+            {
+              "id": 113,
+              "country": "瑞士"
+            },
+            {
+              "id": 55,
+              "country": "中国澳门"
+            },
+            {
+              "id": 114,
+              "country": "奥地利"
+            }
+          ]
+        %}
+        <div class="sitemap sitemap03">
+          <h2>出国留学</h2>
+          <ul class="footer-country">
+            {% for cItem in footerCountry %}
+            <li><a href="{{helper.active_urlgen('articles','n=' + cItem.id)}}" target="_blank">{{cItem.country}}留学</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+        <div class="sitemap sitemap04">
+          <h2 class="guanzhu">关注金吉列:</h2>
+          <div class="clearfix" style="margin-top:4px;">
+              <dl class="foot-weibo" style="width: 80px;">
+                <dt><img src="{{helper.cdnhost}}/assets/img/liuxue_weixin.png" alt="留学微信"></dt>
+                <dd>留学官方微信</dd>
+              </dl>
+              <dl>
+                <dt><img src="{{helper.cdnhost}}/assets/img/yimin_weixin.png" alt="移民微信"></dt>
+                <dd>移民官方微信</dd>
+              </dl>
+            </div>
+            <div class="clearfix" style="margin-top:4px;">
+              <dl class="foot-weibo" style="width: 80px;">
+                <dt><img src="{{helper.cdnhost}}/assets/img/liuxue_weibo.png" alt="留学微博"></dt>
+                <dd>留学官方微博</dd>
+              </dl>
+              <dl>
+                <dt><img src="{{helper.cdnhost}}/assets/img/yimin_weibo.png" alt="移民微博"></dt>
+                <dd>移民官方微博</dd>
+              </dl>
+            </div>
+        </div>
       </div>
-      <li class="address clearfix">
+      <div class="address clearfix" style="padding-left: 20px">
         <h2>欢迎来访</h2>
-        <ol class="xiangxi-address one" id="qita-city" style="margin-bottom: 34px;">
+        <ol class="xiangxi-address one" id="qita-city">
           <li><i class="iconfont">&#xe679;</i><span>400-010-8000</span></li>
           <li><i class="iconfont">&#xe611;</i><span id="tel">010-65685656</span></li>
           <li><i class="iconfont">&#xe603;</i><span id="address">北京市建国门外大街永安东里米阳大厦5层（永安里地铁C口向南50米) </span><span class="useMap" style="color: #fff;margin-left: 20px;text-decoration: underline;cursor: pointer;">【点击查看地图】</span></li>
         </ol>
         <ul class="xiangxi-address one clearfix" id="wc-hk" style="display: none;margin-bottom: 34px;" >
           <li><i class="iconfont">&#xe679;</i><span>400-010-8000</span></li>
-          <li style="width: 1100px;">
+          <li class="wuhan-address"style="width: 550px">
             <ul>
-              <li><i class="iconfont">&#xe611;</i><span>027-67811600&nbsp;&nbsp;/&nbsp;&nbsp;027-83805656</span></li>
-              <li><i class="iconfont">&#xe603;</i><span>武昌分公司：武汉市洪山区珞瑜路10号群光中心百脑汇23层&nbsp;<span class="useMap wc" style="color: #fff;margin-left: 20px;text-decoration: underline;cursor: pointer;">【点击查看地图】</span>     &nbsp;&nbsp;汉口分公司：武汉市航空路新世界中心C座20层<span class="useMap wh" style="color: #fff;margin-left: 20px;text-decoration: underline;cursor: pointer;">【点击查看地图】</span></span></li>
+              <li><i class="iconfont">&#xe611;</i><span>027-67811600</span></li>
+              <li><i class="iconfont">&#xe603;</i><span>武昌分公司：武汉市洪山区珞瑜路10号群光中心百脑汇23层 </span>
+                <span class="useMap wc" style="color: #fff;margin-left: 20px;text-decoration: underline;cursor: pointer;">【点击查看地图】</span></li>
             </ul>
-
+  
           </li>
+         <li  class="wuhan-address" style="width: 550px">
+          <ul>
+            <li><i class="iconfont">&#xe611;</i><span>027-83805656</span></li>
+            <li><i class="iconfont">&#xe603;</i><span>汉口分公司：武汉市航空路新世界中心C座20层 </span><span class="useMap wh" style="color: #fff;margin-left: 20px;text-decoration: underline;cursor: pointer;">【点击查看地图】</span></li>
+          </ul>
+  
+         </li>
+  
         </ul>
-
-    </div>
-    <div class="footer-right">
-      <h2 class="guanzhu">关注金吉列</h2>
-      <div class="clearfix" style="margin-top:4px;">
-        <dl class="foot-weibo" style="width: 80px;">
-          <dt><img src="{{helper.cdnhost}}/assets/img/liuxue_weixin.png" alt="留学微信"></dt>
-          <dd>留学官方微信</dd>
-        </dl>
-        <dl style="margin-left: 40px;">
-          <dt><img src="{{helper.cdnhost}}/assets/img/yimin_weixin.png" alt="移民微信"></dt>
-          <dd>移民官方微信</dd>
-        </dl>
+        <p class="copyright" style="padding-left: 0">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
+        <div class="adviser-login" onclick="adviserlogin()">
+          咨询顾问登录
+        </div>
       </div>
-      <div class="clearfix" style="margin-top:4px;">
-        <dl class="foot-weibo" style="width: 80px;">
-          <dt><img src="{{helper.cdnhost}}/assets/img/liuxue_weibo.png" alt="留学微博"></dt>
-          <dd>留学官方微博</dd>
-        </dl>
-        <dl style="margin-left: 40px;">
-          <dt><img src="{{helper.cdnhost}}/assets/img/yimin_weibo.png" alt="移民微博"></dt>
-          <dd>移民官方微博</dd>
-        </dl>
-      </div>
+  
     </div>
-    <p class="copyright clearfix" style="*margin-top:-20px;">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
-    <div class="adviser-login" onclick="adviserlogin()">
-      咨询顾问登录
-    </div>
-    </div>
-
-
-</div>
-
+  </div>
 <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
 <script src="{{helper.cdnhost}}/dep/js/layer-1.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/top.js"></script>
