--- a/views/widget/academy/academy6.html
+++ b/views/widget/academy/academy6.html
@@ -2,9 +2,9 @@
 <div class="dui-layout-padding clearfix moment">
   {% for item in channel %}
   <div class="dui-layout-col3">
-    <div class="jincai"><a href="{{helper.urlgen('about/culture',item.id | string)}}"><img class="dui-layout-col3-img" src="{{ helper.imageThumb(item.thumb,'365x275')}}" alt=""></a></div>
-    <p class="jincai-tit"><a class="dui-text-warning-s" href="{{helper.urlgen('about/culture',item.id | string)}}">{{ item.title |ellipsis(22)   }}</a></p>
-    <p class="jincai-con"><a class="dui-text-warning-ss" href="{{helper.urlgen('about/culture',item.id | string)}}">{{ item.description |ellipsis(62) }}</a></p>
+    <div class="jincai"><img class="dui-layout-col3-img" src="{{ helper.imageThumb(item.thumb,'365x275')}}" alt=""></div>
+    <p class="jincai-tit">{{ item.title |ellipsis(22)   }}</p>
+    <p class="jincai-con">{{ item.description |ellipsis(62) }}</p>
   </div>
   {% endfor %}
 </div>
